{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "d7bc79b2-943b-42c1-a533-702c97a73cde",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3b7b904f-ff14-45cf-8750-805a3a653a6b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "2aea040a-5c25-49ad-b3e6-1a8659933dc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "d1cc0c03-c912-4d52-9105-dc13f53b9cb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7d3122cb-d299-4cfd-b1b5-63e035ebf87f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "443fcb03-b1ca-4a49-a02a-355bf3cf6f1b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ea55f2f3-fb2e-49d8-82f7-a56196f27ca7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b2f5805b-1d31-4fb1-83ba-0368264da1ad",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7a95e733-e0c3-40e2-b688-b2f58afff351",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "afe0fd46-2911-441b-b483-de60d1c131ca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e9b065b-96f8-49b6-8d2a-648159137585",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UICanvas",
            "id": "010987f4-fc57-473a-a0f2-8598f0b7573b",
            "actions": [
                {
                    "name": "UnPauseGame",
                    "type": "Button",
                    "id": "95746296-9073-446b-b06e-f9f36299e17e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a47e694-3f59-42af-a7a7-8e1cb70defd3",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnPauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseCanvas",
            "id": "054777d2-a08c-4c77-9437-fe52e17c2d99",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Timeline",
            "id": "77d02790-2dbf-4d15-9007-c74b4c6d42db",
            "actions": [
                {
                    "name": "SkipTimeline",
                    "type": "Button",
                    "id": "e04a9669-b899-4bda-84b3-e80c0ec48174",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a1ba7d3-ff0e-4b79-b6bd-dd0acf26250b",
                    "path": "<Keyboard>/p",
                    "interactions": "Hold(duration=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SkipTimeline",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}